--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9090
+
 # Datasourse Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/jrtp
 spring.datasource.username=root
@@ -12,3 +13,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.application.name=02-Mini-Project-User-Managment-System-Report
+
+#SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mahaleshubham2001@gmail.com
+spring.mail.password=zpumwcyjsvowvmbq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
